--- a/config-repo/api-gateway-new.properties
+++ b/config-repo/api-gateway-new.properties
@@ -2,5 +2,5 @@
 zuul.routes.api-a-url.path=/hello/**
 zuul.routes.api-a-url.serviceId=HELLO-DEMO
 
-zuul.routes.api-feign.path=/api-f/**
+zuul.routes.api-feign.path=/api/**
 zuul.routes.api-feign.serviceId=FEIGN-CONSUMER
